--- a/block-template-parts/footer.html
+++ b/block-template-parts/footer.html
@@ -22,7 +22,7 @@
 							<!-- /wp:heading -->
 
 							<!-- wp:paragraph -->
-								<p>This theme is an experiment. It uses the <a hre="https://developer.wordpress.org/block-editor/developers/themes/block-based-themes/">new block syntax for WordPress themes</a>. You can follow along with the progress of Gutenberg themes on <a href="https://github.com/WordPress/gutenberg/pull/18925">GitHub</a>.</p>
+								<p>This theme is an experiment. It uses the <a href="https://developer.wordpress.org/block-editor/developers/themes/block-based-themes/">new block syntax for WordPress themes</a>. You can follow along with the progress of Gutenberg themes on <a href="https://github.com/WordPress/gutenberg/pull/18925">GitHub</a>.</p>
 							<!-- /wp:paragraph -->
 						</div>
 					<!-- /wp:column -->
